# rezon

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  UPGRADING.md  index.html  package.json
crates/rezon-core/: Cargo.toml  models.json
crates/rezon-core/src/: embed.rs  journal.rs  lib.rs  llm.rs  search.rs  vault.rs  wikilink.rs
crates/rezon-core/src/agent/: cloud.rs  confirm.rs  event.rs  local.rs  loop_.rs  message.rs  mod.rs  provider.rs  tool.rs
crates/rezon-core/src/agent/tools/: file_read.rs  mod.rs  read_note.rs  search_notes.rs  shell_exec.rs  web_fetch.rs  write_note.rs
crates/rezon-tui/: Cargo.toml
crates/rezon-tui/src/: agent.rs  conv_index.rs  input.rs  main.rs  markdown.rs  picker.rs  repl.rs  setup.rs  sink.rs  spinner.rs  store.rs  vault.rs
crates/rezon-web/: Cargo.toml  tauri.conf.json
crates/rezon-web/examples/: agent_e2e.rs  local_tool_spike.rs  react_agent.rs  run_agent_e2e.sh  run_local_tool_spike.sh  run_react_agent_openrouter.sh
crates/rezon-web/src/: embed.rs  lib.rs  llm.rs  main.rs  search.rs  secrets.rs  vault.rs
crates/rezon-web/src/agent/: commands.rs  local.rs  mod.rs  tauri_gate.rs  tauri_sink.rs
crates/rezon-web/src/agent/tools/: current_time.rs  mod.rs  search_notes.rs  shell_exec.rs  web_fetch.rs
docs/dev/: agent_architecture.md  agent_frameworks.md  agent_loop_design.md  local_tool_calling.md
src/: App.css  App.tsx  ConfirmToolDialog.tsx  Dialog.tsx  MessageBody.tsx  RightSidebar.tsx  Select.tsx  SettingsDrawer.tsx  Sidebar.tsx  Tooltip.tsx  secrets.ts  storage.ts  types.ts
src-tauri/: Cargo.toml  models.json  tauri.conf.json
src-tauri/examples/: agent_e2e.rs  local_tool_spike.rs
src-tauri/src/: lib.rs  llm.rs  main.rs  search.rs  vault.rs
src-tauri/src/agent/: cloud.rs  commands.rs  confirm.rs  delta.rs  local.rs  loop_.rs  message.rs  mod.rs  provider.rs  tool.rs
src-tauri/src/agent/tools/: mod.rs  search_notes.rs  shell_exec.rs  web_fetch.rs
src/notes/: FileTree.tsx  JournalPanel.tsx  MilkdownEditor.tsx  NotesView.tsx  vault.ts  wikilink.ts
