[package]
name = "rezon-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.36", features = ["chat-completion"] }
async-trait = "0.1"
encoding_rs = "0.8.35"
futures = "0.3"
llama-cpp-2 = { version = "0.1.146", features = ["metal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.52.2", features = ["sync", "macros", "time", "rt"] }
