[package]
name = "rezon-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rezon-tui"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
directories = "5"
rezon-core = { path = "../rezon-core" }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
tokio = { version = "1", features = ["full"] }
