[package]
name = "rezon-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rezon-tui"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
nucleo-matcher = "0.3"
pulldown-cmark = { version = "0.12", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
rezon-core = { path = "../rezon-core" }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
