[package]
name = "rezon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rezon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rezon-core = { path = "../rezon-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
tokio = { version = "1.52.2", features = ["sync", "process", "io-util", "time", "macros"] }
# `async_trait` is used by the Tauri-side `ConfirmationGate` impl.
async-trait = "0.1"

[dev-dependencies]
# Examples (examples/react_agent.rs, local_tool_spike.rs, agent_e2e.rs) use
# these directly. The Tauri app proper inherits everything via rezon-core,
# so they live under [dev-dependencies] here to keep the production build
# graph slim.
tokio = { version = "1.52.2", features = ["rt", "macros", "time", "net"] }
llama-cpp-2 = { version = "0.1.146", features = ["metal"] }
encoding_rs = "0.8.35"
async-openai = { version = "0.36", features = ["chat-completion"] }

